--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,13 @@
           },
           "configurations": {
             "production": {
+
+              "fileReplacements": [
+    {
+      "replace": "src/environments/environment.development.ts",
+      "with": "src/environments/environment.ts"
+    }
+  ],
               "budgets": [
                 {
                   "type": "initial",
